--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head><meta charset="utf-8">
-
+    <head>
+        <meta charset="utf-8">
+        <title>Query James</title>
     </head>
     <body>
         
