--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Query James</title>
+        <link rel="icon" type="image/png" href="img/logoQJ.png">
     </head>
     <body>
+        <header>
+            <div class="navbar">
+                <div class="logo"><img src="img/logoQJ.png"></div>
+            </div>
+        </header>
+        <div>
+
+        </div>
+        <footer>
+            <div>
+
+            </div>
+        </footer>
         
     </body>
 </html>
