--- a/index.html
+++ b/index.html
@@ -4,17 +4,43 @@
         <meta charset="utf-8">
         <title>Query James</title>
         <link rel="icon" type="image/png" href="img/logoQJ.png">
+        <link href="style.css" rel="stylesheet" />
     </head>
     <body>
         <header>
             <div class="navbar">
-                <div class="logo"><img src="img/logoQJ.png"></div>
+                <div class="logo">
+                    <image src="img/logoQJ.png"></image>
+                </div>
+                <div><h4>QUERY JAMES</h4></div>
             </div>
         </header>
         <div>
+            <p>C'est les questions maintenant</p>
+            <div>
+                <form>
+                    <input>
+                    <input>
 
+                </form>
+            </div>
         </div>
+
+        <div>
+            <table>
+                <thead>
+                    <th>1</th>
+                    <th>2</th>
+                </thead>
+                <tbody>
+                    <tr>3</tr>
+                    <tr>4</tr>
+                </tbody>
+            </table>
+        </div>
+
         <footer>
+            <h2>QUERY JAMES</h2>
             <div>
 
             </div>
