--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
             <div class="navbar">
                 <div class="logo">
                     <image src="img/logoQJ.png"></image>
+                    <div><h4>QUERY JAMES</h4></div>   
                 </div>
-                <div><h4>QUERY JAMES</h4></div>
+                
             </div>
         </header>
-        <div>
+        <div class="quest">
             <p>C'est les questions maintenant</p>
             <div>
                 <form>
@@ -26,15 +27,17 @@
             </div>
         </div>
 
-        <div>
+        <div class="result">
             <table>
                 <thead>
-                    <th>1</th>
-                    <th>2</th>
+                    <tr>
+                        <th>1</th>
+                        <th>2</th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>3</tr>
-                    <tr>4</tr>
+                    <tr><td>reponse 1</td><td> POURCENTAGE</td></tr>
+                    <tr><td>reponse 2</td><td> POURCENTAGE</td></tr>
                 </tbody>
             </table>
         </div>
