--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <header>
             <div class="navbar">
                 <div class="nav">
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="">Map</a>
+                    <a href="">login</a>
+
                 </div>
                 <div class="logo">
                     <div><h4>QUERY JAMES</h4></div>
@@ -46,6 +48,10 @@
                     <tr><td>reponse 2</td><td> POURCENTAGE</td></tr>
                 </tbody>
             </table>
+        </div>
+
+        <div class="map">
+            <img src="img/worldmapgray.jpg" />
         </div>
 
         <footer>
