--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="navbar">
                 <div class="nav">
                     <a href="index.html">Home</a>
-                    <a href="">Map</a>
+                    <a href="">Maps</a>
                     <a href="">login</a>
 
                 </div>
